# MLOpsLabs

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  main.ipynb  preprocess.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: api.md  data-pipeline.md  development.md  mamba4rec.md  monitoring.md
feast/: feature_store.yaml
feast/feature_views/: __init__.py  movielens_features.py  raw_features.py  serving_features.py
featurestorage/: __init__.py
featurestorage/trainning/: __init__.py  apply.py  config.py  data_sources.py  duckdb_engine.py  entities.py  feature_retrieval.py  feature_store.yaml  feature_views.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: api_dashboard.json  ml_metrics_dashboard.json  service_health_dashboard.json
notebooks/: 01_eda.ipynb
registry/: registry.db
scripts/: create_kafka_topics.sh  feast_apply.sh  run_experiments.py  run_workflow.sh  simulate_ingestion.py
src/api/: Dockerfile  dependencies.py  main.py  metrics.py
src/api/routers/: health.py  ingest.py  predict.py  train.py
src/api/schemas/: ingest.py  (+2 more)
src/core/: cache.py  config.py  duckdb_client.py  kafka_producer.py  metrics.py  storage.py
src/data/: __init__.py  movielens_dataset.py
src/features/: materialization.py  transformations.py
src/inference/: __init__.py  mamba_predictor.py
src/models/: evaluator.py  mamba4rec.py  mamba_evaluator.py  predict.py  registry.py  trainer.py
src/pipelines/: consumer.py  ingest_pipeline.py  showing_pipeline.py  topics.py
src/preprocessing/: preprocess.py  test.ipynb
src/training/: __init__.py  mamba_trainer.py
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_features.py  test_materialization_pipeline.ipynb  test_models.py  test_predict.py  test_schemas.py  test_trainer.ipynb
(+1 files in other folders)
