[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlops-finalproject"
version = "0.1.0"
description = "MLOps pipeline: Kafka → MinIO (Delta Lake) → Feast/DuckDB → FastAPI → MLflow"
requires-python = ">=3.11"
dependencies = [
    # --- Core API ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # --- Feast + DuckDB ---
    # No extras: redis is declared separately (feast[redis] caps redis<5 on older versions)
    "feast>=0.50.0",
    "duckdb>=1.2.0",
    "ibis-framework[duckdb]>=9.0.0",

    # --- Delta Lake / Storage ---
    "deltalake>=0.25.0",
    "pyarrow>=14.0.0",
    "boto3>=1.37.0",

    # --- Kafka ---
    "confluent-kafka>=2.8.0",

    # --- MLflow ---
    "mlflow>=3.1.0",

    # --- Redis ---
    "redis>=5.2.0",

    # --- HTTP client (used in /health endpoint) ---
    "httpx>=0.28.0",

    # --- Monitoring ---
    "prometheus-fastapi-instrumentator>=7.1.0",
    "prometheus-client>=0.21.0",

    # --- Data / ML ---
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "numpy>=1.22.0",

    # --- Deep Learning (Mamba4Rec) ---
    "torch>=2.2.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
mamba-gpu = [
    "mamba-ssm>=1.2.0",   # requires CUDA; install only when GPU is available
]

dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
